[gd_scene load_steps=4 format=3 uid="uid://ch2libn6m8ou0"]

[ext_resource type="Script" path="res://perimeter/perimeter.gd" id="1_u2r85"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_to53y"]
polygon = PackedVector2Array(-2.57167e-13, -1400, -68.6947, -1398.31, -137.224, -1393.26, -205.423, -1384.85, -273.126, -1373.1, -340.172, -1358.04, -406.399, -1339.72, -471.646, -1318.16, -535.757, -1293.43, -598.577, -1265.59, -659.955, -1234.69, -719.744, -1200.82, -777.798, -1164.06, -833.979, -1124.49, -888.151, -1082.21, -940.183, -1037.33, -989.949, -989.949, -1037.33, -940.183, -1082.21, -888.151, -1124.49, -833.979, -1164.06, -777.798, -1200.82, -719.744, -1234.69, -659.955, -1265.59, -598.577, -1293.43, -535.757, -1318.16, -471.646, -1339.72, -406.399, -1358.04, -340.172, -1373.1, -273.126, -1384.85, -205.423, -1393.26, -137.224, -1398.31, -68.6947, -1400, 1.71445e-13, -1398.31, 68.6947, -1393.26, 137.224, -1384.85, 205.423, -1373.1, 273.126, -1358.04, 340.172, -1339.72, 406.399, -1318.16, 471.646, -1293.43, 535.757, -1265.59, 598.577, -1234.69, 659.955, -1200.82, 719.744, -1164.06, 777.798, -1124.49, 833.979, -1082.21, 888.151, -1037.33, 940.183, -989.949, 989.949, -940.183, 1037.33, -888.151, 1082.21, -833.979, 1124.49, -777.798, 1164.06, -719.744, 1200.82, -659.955, 1234.69, -598.577, 1265.59, -535.757, 1293.43, -471.646, 1318.16, -406.399, 1339.72, -340.172, 1358.04, -273.126, 1373.1, -205.423, 1384.85, -137.224, 1393.26, -68.6947, 1398.31, 8.57224e-14, 1400, 68.6947, 1398.31, 137.224, 1393.26, 205.423, 1384.85, 273.126, 1373.1, 340.172, 1358.04, 406.399, 1339.72, 471.646, 1318.16, 535.757, 1293.43, 598.577, 1265.59, 659.955, 1234.69, 719.744, 1200.82, 777.798, 1164.06, 833.979, 1124.49, 888.151, 1082.21, 940.183, 1037.33, 989.949, 989.949, 1037.33, 940.183, 1082.21, 888.151, 1124.49, 833.979, 1164.06, 777.798, 1200.82, 719.744, 1234.69, 659.955, 1265.59, 598.577, 1293.43, 535.757, 1318.16, 471.646, 1339.72, 406.399, 1358.04, 340.172, 1373.1, 273.126, 1384.85, 205.423, 1393.26, 137.224, 1398.31, 68.6947, 1400, 0, 1398.31, -68.6947, 1393.26, -137.224, 1384.85, -205.423, 1373.1, -273.126, 1358.04, -340.172, 1339.72, -406.399, 1318.16, -471.646, 1293.43, -535.757, 1265.59, -598.577, 1234.69, -659.955, 1200.82, -719.744, 1164.06, -777.798, 1124.49, -833.979, 1082.21, -888.151, 1037.33, -940.183, 989.949, -989.949, 940.183, -1037.33, 888.151, -1082.21, 833.979, -1124.49, 777.798, -1164.06, 719.744, -1200.82, 659.955, -1234.69, 598.577, -1265.59, 535.757, -1293.43, 471.646, -1318.16, 406.399, -1339.72, 340.172, -1358.04, 273.126, -1373.1, 205.423, -1384.85, 137.224, -1393.26, 68.6947, -1398.31, 8.57224e-14, -1400, 8.8784e-14, -1450, 71.1481, -1448.25, 142.125, -1443.02, 212.759, -1434.31, 282.881, -1422.14, 352.321, -1406.55, 420.913, -1387.56, 488.49, -1365.24, 554.891, -1339.63, 619.955, -1310.78, 683.525, -1278.79, 745.449, -1243.71, 805.577, -1205.63, 863.764, -1164.65, 919.87, -1120.87, 973.76, -1074.38, 1025.3, -1025.3, 1074.38, -973.76, 1120.87, -919.87, 1164.65, -863.764, 1205.63, -805.577, 1243.71, -745.449, 1278.79, -683.525, 1310.78, -619.955, 1339.63, -554.891, 1365.24, -488.49, 1387.56, -420.913, 1406.55, -352.321, 1422.14, -282.881, 1434.31, -212.759, 1443.02, -142.125, 1448.25, -71.1481, 1450, 0, 1448.25, 71.1481, 1443.02, 142.125, 1434.31, 212.759, 1422.14, 282.881, 1406.55, 352.321, 1387.56, 420.913, 1365.24, 488.49, 1339.63, 554.891, 1310.78, 619.955, 1278.79, 683.525, 1243.71, 745.449, 1205.63, 805.577, 1164.65, 863.764, 1120.87, 919.87, 1074.38, 973.76, 1025.3, 1025.3, 973.76, 1074.38, 919.87, 1120.87, 863.764, 1164.65, 805.577, 1205.63, 745.449, 1243.71, 683.525, 1278.79, 619.955, 1310.78, 554.891, 1339.63, 488.49, 1365.24, 420.913, 1387.56, 352.321, 1406.55, 282.881, 1422.14, 212.759, 1434.31, 142.125, 1443.02, 71.1481, 1448.25, 8.8784e-14, 1450, -71.1481, 1448.25, -142.125, 1443.02, -212.759, 1434.31, -282.881, 1422.14, -352.321, 1406.55, -420.913, 1387.56, -488.49, 1365.24, -554.891, 1339.63, -619.955, 1310.78, -683.525, 1278.79, -745.449, 1243.71, -805.577, 1205.63, -863.764, 1164.65, -919.87, 1120.87, -973.76, 1074.38, -1025.3, 1025.3, -1074.38, 973.76, -1120.87, 919.87, -1164.65, 863.764, -1205.63, 805.577, -1243.71, 745.449, -1278.79, 683.525, -1310.78, 619.955, -1339.63, 554.891, -1365.24, 488.49, -1387.56, 420.913, -1406.55, 352.321, -1422.14, 282.881, -1434.31, 212.759, -1443.02, 142.125, -1448.25, 71.1481, -1450, 1.77568e-13, -1448.25, -71.1481, -1443.02, -142.125, -1434.31, -212.759, -1422.14, -282.881, -1406.55, -352.321, -1387.56, -420.913, -1365.24, -488.49, -1339.63, -554.891, -1310.78, -619.955, -1278.79, -683.525, -1243.71, -745.449, -1205.63, -805.577, -1164.65, -863.764, -1120.87, -919.87, -1074.38, -973.76, -1025.3, -1025.3, -973.76, -1074.38, -919.87, -1120.87, -863.764, -1164.65, -805.577, -1205.63, -745.449, -1243.71, -683.525, -1278.79, -619.955, -1310.78, -554.891, -1339.63, -488.49, -1365.24, -420.913, -1387.56, -352.321, -1406.55, -282.881, -1422.14, -212.759, -1434.31, -142.125, -1443.02, -71.1481, -1448.25, -2.66352e-13, -1450)

[sub_resource type="CircleShape2D" id="CircleShape2D_xu2au"]
radius = 1400.0

[node name="Perimeter" type="Node2D" groups=["Perimeter"]]
script = ExtResource("1_u2r85")
border_width = 41.16
number_of_segments = 128

[node name="ParticleCollider" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_to53y")

[node name="PerimiterArea" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerimiterArea"]
shape = SubResource("CircleShape2D_xu2au")

[node name="PlayerCollider" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlayerCollider"]
build_mode = 1
polygon = PackedVector2Array(8.57224e-14, -1400, 68.6947, -1398.31, 137.224, -1393.26, 205.423, -1384.85, 273.126, -1373.1, 340.172, -1358.04, 406.399, -1339.72, 471.646, -1318.16, 535.757, -1293.43, 598.577, -1265.59, 659.955, -1234.69, 719.744, -1200.82, 777.798, -1164.06, 833.979, -1124.49, 888.151, -1082.21, 940.183, -1037.33, 989.949, -989.949, 1037.33, -940.183, 1082.21, -888.151, 1124.49, -833.979, 1164.06, -777.798, 1200.82, -719.744, 1234.69, -659.955, 1265.59, -598.577, 1293.43, -535.757, 1318.16, -471.646, 1339.72, -406.399, 1358.04, -340.172, 1373.1, -273.126, 1384.85, -205.423, 1393.26, -137.224, 1398.31, -68.6947, 1400, 0, 1398.31, 68.6947, 1393.26, 137.224, 1384.85, 205.423, 1373.1, 273.126, 1358.04, 340.172, 1339.72, 406.399, 1318.16, 471.646, 1293.43, 535.757, 1265.59, 598.577, 1234.69, 659.955, 1200.82, 719.744, 1164.06, 777.798, 1124.49, 833.979, 1082.21, 888.151, 1037.33, 940.183, 989.949, 989.949, 940.183, 1037.33, 888.151, 1082.21, 833.979, 1124.49, 777.798, 1164.06, 719.744, 1200.82, 659.955, 1234.69, 598.577, 1265.59, 535.757, 1293.43, 471.646, 1318.16, 406.399, 1339.72, 340.172, 1358.04, 273.126, 1373.1, 205.423, 1384.85, 137.224, 1393.26, 68.6947, 1398.31, 8.57224e-14, 1400, -68.6947, 1398.31, -137.224, 1393.26, -205.423, 1384.85, -273.126, 1373.1, -340.172, 1358.04, -406.399, 1339.72, -471.646, 1318.16, -535.757, 1293.43, -598.577, 1265.59, -659.955, 1234.69, -719.744, 1200.82, -777.798, 1164.06, -833.979, 1124.49, -888.151, 1082.21, -940.183, 1037.33, -989.949, 989.949, -1037.33, 940.183, -1082.21, 888.151, -1124.49, 833.979, -1164.06, 777.798, -1200.82, 719.744, -1234.69, 659.955, -1265.59, 598.577, -1293.43, 535.757, -1318.16, 471.646, -1339.72, 406.399, -1358.04, 340.172, -1373.1, 273.126, -1384.85, 205.423, -1393.26, 137.224, -1398.31, 68.6947, -1400, 1.71445e-13, -1398.31, -68.6947, -1393.26, -137.224, -1384.85, -205.423, -1373.1, -273.126, -1358.04, -340.172, -1339.72, -406.399, -1318.16, -471.646, -1293.43, -535.757, -1265.59, -598.577, -1234.69, -659.955, -1200.82, -719.744, -1164.06, -777.798, -1124.49, -833.979, -1082.21, -888.151, -1037.33, -940.183, -989.949, -989.949, -940.183, -1037.33, -888.151, -1082.21, -833.979, -1124.49, -777.798, -1164.06, -719.744, -1200.82, -659.955, -1234.69, -598.577, -1265.59, -535.757, -1293.43, -471.646, -1318.16, -406.399, -1339.72, -340.172, -1358.04, -273.126, -1373.1, -205.423, -1384.85, -137.224, -1393.26, -68.6947, -1398.31, -2.57167e-13, -1400)

[node name="Border" type="Line2D" parent="."]
points = PackedVector2Array(8.69826e-14, -1420.58, 34.8628, -1420.15, 69.7046, -1418.87, 104.504, -1416.73, 139.241, -1413.74, 173.894, -1409.9, 208.442, -1405.2, 242.865, -1399.67, 277.141, -1393.28, 311.251, -1386.06, 345.173, -1378.01, 378.887, -1369.12, 412.373, -1359.41, 445.61, -1348.88, 478.579, -1337.54, 511.26, -1325.39, 543.632, -1312.44, 575.678, -1298.71, 607.376, -1284.19, 638.709, -1268.9, 669.657, -1252.84, 700.201, -1236.03, 730.324, -1218.47, 760.007, -1200.18, 789.232, -1181.17, 817.982, -1161.44, 846.239, -1141.02, 873.986, -1119.91, 901.206, -1098.12, 927.884, -1075.68, 954.003, -1052.58, 979.547, -1028.85, 1004.5, -1004.5, 1028.85, -979.547, 1052.58, -954.003, 1075.68, -927.884, 1098.12, -901.206, 1119.91, -873.986, 1141.02, -846.239, 1161.44, -817.982, 1181.17, -789.232, 1200.18, -760.007, 1218.47, -730.324, 1236.03, -700.201, 1252.84, -669.657, 1268.9, -638.709, 1284.19, -607.376, 1298.71, -575.678, 1312.44, -543.632, 1325.39, -511.26, 1337.54, -478.579, 1348.88, -445.61, 1359.41, -412.373, 1369.12, -378.887, 1378.01, -345.173, 1386.06, -311.251, 1393.28, -277.141, 1399.67, -242.865, 1405.2, -208.442, 1409.9, -173.894, 1413.74, -139.241, 1416.73, -104.504, 1418.87, -69.7046, 1420.15, -34.8628, 1420.58, 0, 1420.15, 34.8628, 1418.87, 69.7046, 1416.73, 104.504, 1413.74, 139.241, 1409.9, 173.894, 1405.2, 208.442, 1399.67, 242.865, 1393.28, 277.141, 1386.06, 311.251, 1378.01, 345.173, 1369.12, 378.887, 1359.41, 412.373, 1348.88, 445.61, 1337.54, 478.579, 1325.39, 511.26, 1312.44, 543.632, 1298.71, 575.678, 1284.19, 607.376, 1268.9, 638.709, 1252.84, 669.657, 1236.03, 700.201, 1218.47, 730.324, 1200.18, 760.007, 1181.17, 789.232, 1161.44, 817.982, 1141.02, 846.239, 1119.91, 873.986, 1098.12, 901.206, 1075.68, 927.884, 1052.58, 954.003, 1028.85, 979.547, 1004.5, 1004.5, 979.547, 1028.85, 954.003, 1052.58, 927.884, 1075.68, 901.206, 1098.12, 873.986, 1119.91, 846.239, 1141.02, 817.982, 1161.44, 789.232, 1181.17, 760.007, 1200.18, 730.324, 1218.47, 700.201, 1236.03, 669.657, 1252.84, 638.709, 1268.9, 607.376, 1284.19, 575.678, 1298.71, 543.632, 1312.44, 511.26, 1325.39, 478.579, 1337.54, 445.61, 1348.88, 412.373, 1359.41, 378.887, 1369.12, 345.173, 1378.01, 311.251, 1386.06, 277.141, 1393.28, 242.865, 1399.67, 208.442, 1405.2, 173.894, 1409.9, 139.241, 1413.74, 104.504, 1416.73, 69.7046, 1418.87, 34.8628, 1420.15, 8.69826e-14, 1420.58, -34.8628, 1420.15, -69.7046, 1418.87, -104.504, 1416.73, -139.241, 1413.74, -173.894, 1409.9, -208.442, 1405.2, -242.865, 1399.67, -277.141, 1393.28, -311.251, 1386.06, -345.173, 1378.01, -378.887, 1369.12, -412.373, 1359.41, -445.61, 1348.88, -478.579, 1337.54, -511.26, 1325.39, -543.632, 1312.44, -575.678, 1298.71, -607.376, 1284.19, -638.709, 1268.9, -669.657, 1252.84, -700.201, 1236.03, -730.324, 1218.47, -760.007, 1200.18, -789.232, 1181.17, -817.982, 1161.44, -846.239, 1141.02, -873.986, 1119.91, -901.206, 1098.12, -927.884, 1075.68, -954.003, 1052.58, -979.547, 1028.85, -1004.5, 1004.5, -1028.85, 979.547, -1052.58, 954.003, -1075.68, 927.884, -1098.12, 901.206, -1119.91, 873.986, -1141.02, 846.239, -1161.44, 817.982, -1181.17, 789.232, -1200.18, 760.007, -1218.47, 730.324, -1236.03, 700.201, -1252.84, 669.657, -1268.9, 638.709, -1284.19, 607.376, -1298.71, 575.678, -1312.44, 543.632, -1325.39, 511.26, -1337.54, 478.579, -1348.88, 445.61, -1359.41, 412.373, -1369.12, 378.887, -1378.01, 345.173, -1386.06, 311.251, -1393.28, 277.141, -1399.67, 242.865, -1405.2, 208.442, -1409.9, 173.894, -1413.74, 139.241, -1416.73, 104.504, -1418.87, 69.7046, -1420.15, 34.8628, -1420.58, 1.73965e-13, -1420.15, -34.8628, -1418.87, -69.7046, -1416.73, -104.504, -1413.74, -139.241, -1409.9, -173.894, -1405.2, -208.442, -1399.67, -242.865, -1393.28, -277.141, -1386.06, -311.251, -1378.01, -345.173, -1369.12, -378.887, -1359.41, -412.373, -1348.88, -445.61, -1337.54, -478.579, -1325.39, -511.26, -1312.44, -543.632, -1298.71, -575.678, -1284.19, -607.376, -1268.9, -638.709, -1252.84, -669.657, -1236.03, -700.201, -1218.47, -730.324, -1200.18, -760.007, -1181.17, -789.232, -1161.44, -817.982, -1141.02, -846.239, -1119.91, -873.986, -1098.12, -901.206, -1075.68, -927.884, -1052.58, -954.003, -1028.85, -979.547, -1004.5, -1004.5, -979.547, -1028.85, -954.003, -1052.58, -927.884, -1075.68, -901.206, -1098.12, -873.986, -1119.91, -846.239, -1141.02, -817.982, -1161.44, -789.232, -1181.17, -760.007, -1200.18, -730.324, -1218.47, -700.201, -1236.03, -669.657, -1252.84, -638.709, -1268.9, -607.376, -1284.19, -575.678, -1298.71, -543.632, -1312.44, -511.26, -1325.39, -478.579, -1337.54, -445.61, -1348.88, -412.373, -1359.41, -378.887, -1369.12, -345.173, -1378.01, -311.251, -1386.06, -277.141, -1393.28, -242.865, -1399.67, -208.442, -1405.2, -173.894, -1409.9, -139.241, -1413.74, -104.504, -1416.73, -69.7046, -1418.87, -34.8628, -1420.15, -2.60948e-13, -1420.58)
width = 41.16

[connection signal="area_exited" from="PerimiterArea" to="." method="_on_perimiter_area_area_exited"]
